// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots basics/Tooltip/TooltipMessage default 1`] = `
.emotion-0 {
  display: inline-block;
  cursor: pointer;
}

.emotion-6 {
  display: inline-block;
  z-index: 2147483647;
  margin-bottom: 10px;
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0px;
  background: rgba(255,255,255,0.95);
  -webkit-filter: drop-shadow(0px 5px 5px rgba(0,0,0,0.05)) drop-shadow(0 1px 3px rgba(0,0,0,0.1));
  filter: drop-shadow(0px 5px 5px rgba(0,0,0,0.05)) drop-shadow(0 1px 3px rgba(0,0,0,0.1));
  border-radius: 8px;
  font-size: 12px;
}

.emotion-1 {
  position: absolute;
  border-style: solid;
  margin-bottom: 0px;
  margin-top: 8px;
  margin-right: 8px;
  margin-left: 8px;
  bottom: -8px;
  top: autopx;
  right: autopx;
  left: autopx;
  border-bottom-width: 0px;
  border-top-width: 8px;
  border-right-width: 8px;
  border-left-width: 8px;
  border-top-color: rgba(255,255,255,0.95);
  border-bottom-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
}

.emotion-5 {
  padding: 15px;
  width: 280px;
  box-sizing: border-box;
}

.emotion-4 {
  color: #444444;
  line-height: 18px;
}

.emotion-2 {
  font-weight: 900;
}

<div
  style="height:300px"
>
  <div
    class="emotion-0"
  >
    <div>
      Tooltip
    </div>
  </div>
  <div
    class="emotion-6"
    style="position:absolute;top:0;left:0;opacity:0;pointer-events:none"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-5"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-2"
        >
          Lorem ipsum dolor sit
        </div>
        <span
          class="emotion-3"
        >
          Amet consectatur vestibulum concet durum politu coret weirom
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots basics/Tooltip/TooltipMessage minimal message 1`] = `
.emotion-0 {
  display: inline-block;
  cursor: pointer;
}

.emotion-5 {
  display: inline-block;
  z-index: 2147483647;
  margin-bottom: 10px;
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0px;
  background: rgba(255,255,255,0.95);
  -webkit-filter: drop-shadow(0px 5px 5px rgba(0,0,0,0.05)) drop-shadow(0 1px 3px rgba(0,0,0,0.1));
  filter: drop-shadow(0px 5px 5px rgba(0,0,0,0.05)) drop-shadow(0 1px 3px rgba(0,0,0,0.1));
  border-radius: 8px;
  font-size: 12px;
}

.emotion-1 {
  position: absolute;
  border-style: solid;
  margin-bottom: 0px;
  margin-top: 8px;
  margin-right: 8px;
  margin-left: 8px;
  bottom: -8px;
  top: autopx;
  right: autopx;
  left: autopx;
  border-bottom-width: 0px;
  border-top-width: 8px;
  border-right-width: 8px;
  border-left-width: 8px;
  border-top-color: rgba(255,255,255,0.95);
  border-bottom-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
}

.emotion-4 {
  padding: 15px;
  width: 280px;
  box-sizing: border-box;
}

.emotion-3 {
  color: #444444;
  line-height: 18px;
}

<div
  style="height:300px"
>
  <div
    class="emotion-0"
  >
    <div>
      Tooltip
    </div>
  </div>
  <div
    class="emotion-5"
    style="position:absolute;top:0;left:0;opacity:0;pointer-events:none"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-4"
    >
      <div
        class="emotion-3"
      >
        <span
          class="emotion-2"
        >
          Amet consectatur vestibulum concet durum politu coret weirom
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots basics/Tooltip/TooltipMessage with link 1`] = `
.emotion-0 {
  display: inline-block;
  cursor: pointer;
}

.emotion-8 {
  display: inline-block;
  z-index: 2147483647;
  margin-bottom: 10px;
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0px;
  background: rgba(255,255,255,0.95);
  -webkit-filter: drop-shadow(0px 5px 5px rgba(0,0,0,0.05)) drop-shadow(0 1px 3px rgba(0,0,0,0.1));
  filter: drop-shadow(0px 5px 5px rgba(0,0,0,0.05)) drop-shadow(0 1px 3px rgba(0,0,0,0.1));
  border-radius: 8px;
  font-size: 12px;
}

.emotion-1 {
  position: absolute;
  border-style: solid;
  margin-bottom: 0px;
  margin-top: 8px;
  margin-right: 8px;
  margin-left: 8px;
  bottom: -8px;
  top: autopx;
  right: autopx;
  left: autopx;
  border-bottom-width: 0px;
  border-top-width: 8px;
  border-right-width: 8px;
  border-left-width: 8px;
  border-top-color: rgba(255,255,255,0.95);
  border-bottom-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
}

.emotion-7 {
  padding: 15px;
  width: 280px;
  box-sizing: border-box;
}

.emotion-4 {
  color: #444444;
  line-height: 18px;
}

.emotion-2 {
  font-weight: 900;
}

.emotion-6 {
  margin-top: 8px;
  text-align: center;
}

.emotion-6 > * {
  margin: 0 8px;
  font-weight: 900;
}

<div
  style="height:300px"
>
  <div
    class="emotion-0"
  >
    <div>
      Tooltip
    </div>
  </div>
  <div
    class="emotion-8"
    style="position:absolute;top:0;left:0;opacity:0;pointer-events:none"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-7"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-2"
        >
          Lorem ipsum dolor sit
        </div>
        <span
          class="emotion-3"
        >
          Amet consectatur vestibulum concet durum politu coret weirom
        </span>
      </div>
      <div
        class="emotion-6"
      >
        <a
          class="emotion-3"
          href="test"
        >
          Continue
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots basics/Tooltip/TooltipMessage with links 1`] = `
.emotion-0 {
  display: inline-block;
  cursor: pointer;
}

.emotion-9 {
  display: inline-block;
  z-index: 2147483647;
  margin-bottom: 10px;
  margin-top: 0px;
  margin-left: 0px;
  margin-right: 0px;
  background: rgba(255,255,255,0.95);
  -webkit-filter: drop-shadow(0px 5px 5px rgba(0,0,0,0.05)) drop-shadow(0 1px 3px rgba(0,0,0,0.1));
  filter: drop-shadow(0px 5px 5px rgba(0,0,0,0.05)) drop-shadow(0 1px 3px rgba(0,0,0,0.1));
  border-radius: 8px;
  font-size: 12px;
}

.emotion-1 {
  position: absolute;
  border-style: solid;
  margin-bottom: 0px;
  margin-top: 8px;
  margin-right: 8px;
  margin-left: 8px;
  bottom: -8px;
  top: autopx;
  right: autopx;
  left: autopx;
  border-bottom-width: 0px;
  border-top-width: 8px;
  border-right-width: 8px;
  border-left-width: 8px;
  border-top-color: rgba(255,255,255,0.95);
  border-bottom-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
}

.emotion-8 {
  padding: 15px;
  width: 280px;
  box-sizing: border-box;
}

.emotion-4 {
  color: #444444;
  line-height: 18px;
}

.emotion-2 {
  font-weight: 900;
}

.emotion-7 {
  margin-top: 8px;
  text-align: center;
}

.emotion-7 > * {
  margin: 0 8px;
  font-weight: 900;
}

<div
  style="height:300px"
>
  <div
    class="emotion-0"
  >
    <div>
      Tooltip
    </div>
  </div>
  <div
    class="emotion-9"
    style="position:absolute;top:0;left:0;opacity:0;pointer-events:none"
  >
    <div
      class="emotion-1"
    />
    <div
      class="emotion-8"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-2"
        >
          Lorem ipsum dolor sit
        </div>
        <span
          class="emotion-3"
        >
          Amet consectatur vestibulum concet durum politu coret weirom
        </span>
      </div>
      <div
        class="emotion-7"
      >
        <a
          class="emotion-3"
          href="test"
        >
          Get more tips
        </a>
        <a
          class="emotion-3"
          href="test"
        >
          Done
        </a>
      </div>
    </div>
  </div>
</div>
`;
